--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ markdown = "^3.7"
 django-filter = "^25.1"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
+flake8 = "^7.1.2"
+black = "^25.1.0"
+isort = "^6.0.0"
 
 
 [build-system]
